# LSTM

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01-LSTM.ipynb
