[tool.poetry]
name = "lstm"
version = "0.1.0"
description = ""
authors = ["Anas Fahid <afahid@diagrams-technologies.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
pandas = "^2.2.2"
torch = "^2.3.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
plotly-resampler = ">=0.8,<1"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
